--- a/src/app/employees/employee-add/employee-add.component.html
+++ b/src/app/employees/employee-add/employee-add.component.html
@@ -1,5 +1,5 @@
 <div class="container mt-5">
-  <h1>Update Employee</h1><br>
+  <h1>Add Employee</h1><br>
 
   <form (ngSubmit)="onSubmit(f)" #f="ngForm">
     <div class="form-gorup">
@@ -31,7 +31,7 @@
       <input type="text" class="form-control" ngModel name="salary">
     </div><br>
     <div class="form-gorup">
-      <button type="submit" class="btn btn-primary">Update</button>
+      <button type="submit" class="btn btn-primary">Save</button>
     </div>
   </form>
 
