--- a/src/app/news/news-list/news-list.component.html
+++ b/src/app/news/news-list/news-list.component.html
@@ -62,6 +62,7 @@
               <div class="card-title mdt-1">{{item.name}}</div>
               <div class="card-text mdt-2">{{item.views}}</div>
             </div>
+
            </div>
          </div>
        </div>
@@ -81,7 +82,7 @@
            currentPage: page,
            totalItems: totalItems
          }
-       " >
+       " (click)="detailNews(item.id)">
          <div class="card">
            <div class="d-flex">
              <img [src]="item.link_image" class="rounded img-1" >
